--- a/style.css
+++ b/style.css
@@ -27,21 +27,65 @@ body {
 .frente {
     background-color: black;
     height: 82%;
-    left: 0%;
+    left: 0;
     opacity: 0.4;
     position: absolute;
     top: 10%;
     width: 20%;
 }
-.carro{
-  height: 8%;
-  left: 0;
-  position: absolute;
-  top: 92%;
-  width: 5%;
+.carro {
+    height: 8%;
+    left: 0;
+    position: absolute;
+    top: 92%;
+    width: 5%;
 }
-.quadrado{
-  position: absolute;
-  top:  10%;
-  left: 10%;
+.quadrado {
+    left: -1%;
+    list-style-type: none;
+    position: absolute;
+    top: 10%;
+}
+.retardado {
+    height: 77%;
+    left: 29%;
+    position: absolute;
+    top: 2%;
+    width: 70%;
+}
+.moto {
+    z-index: 1;
+}
+.codigo {
+    border-radius: 100%;
+    height: 2%;
+    left: 29%;
+    position: absolute;
+    top: 3%;
+    width: 2%;
+}
+.roupa {
+    height: 9%;
+    left: 6%;
+    position: absolute;
+    top: 91%;
+    width: 7%;
+}
+.series {
+    color: white;
+    height: 10%;
+    left: 35%;
+    position: absolute;
+    top: 0;
+    width: 10%;
+}
+.biscoito {
+    left: 41%;
+    list-style-type: none;
+    position: absolute;
+    top: 13%;
+}
+.bosta {
+    color: white;
+    font-size: 110%;
 }
