--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 body {
     background-color: #2e9afe;
 }
+a{
+  text-decoration: none;
+  color: black;
+}
 .barra_de_tarefas {
     background-color: black;
     height: 5%;
@@ -86,4 +90,85 @@ body {
     list-style-type: none;
     position: absolute;
     top: 14%;
+}
+.opcao_primaria_do_01episodio_01temporada_sherlock_dublado {
+    background-color: gray;
+    height: 6%;
+    left: 64%;
+    position: absolute;
+    top: 16%;
+    width: 5%;
+}
+.option_primary_do_01epsodio_01temporada_sherlock_dublado {
+    color: white;
+    font-family: sans-serif;
+    left: -19%;
+    list-style-type: none;
+    position: absolute;
+    top: -15%;
+}
+.fundo_do_video {
+    height: 58%;
+    left: 1%;
+    position: absolute;
+    width: 42%;
+    z-index: -1;
+}
+.video_01episodio_01temporada_sherlock_dublada {
+    left: 1%;
+    position: absolute;
+    top: 3%;
+}
+.button_fechar_video {
+    border-radius: 50%;
+    height: 2%;
+    left: 1%;
+    position: absolute;
+    top: 1%;
+    width: 1%;
+}
+.opcoes_secundarias_de_baixar_o_01episodio_01temporada_de_sherlock_dublada {
+    background-color: gray;
+    border-radius: 4%;
+    height: 44%;
+    left: 10%;
+    position: absolute;
+    top: 10%;
+    width: 28%;
+    z-index: -1;
+}
+.fechar_janela_de_opcoes_secundarias_de_baixar_o_01episodio_01temporada_de_sherlock_dublada {
+    color: red;
+    font-family: sans-serif;
+    font-size: 100%;
+    height: 10%;
+    left: 3%;
+    position: absolute;
+    top: -1%;
+    width: 10%;
+}
+.area_central_de_opcoes_secundaris_de_baixar_o_01episodio_01temporada_de_sherlock_dublada {
+    background-color: #d8d8d8;
+    border-color: #bdbdbd;
+    border-style: solid;
+    height: 85%;
+    left: 3%;
+    position: absolute;
+    top: 10%;
+    width: 94%;
+}
+.titulo_opcoes_secundarias_de_baixar_01epsodio_01temporada_sherlock_dublado {
+    color: white;
+    font-family: sans-serif;
+    font-size: 113%;
+    left: 26%;
+    position: absolute;
+    top: 0;
+}
+.lista_de_formatos_e_resolucoes_para_as_opcoes_secundaris_de_baixar_o_01episodio_01temporada_de_sherlock_dublada {
+    font-family: sans-serif;
+    left: -6%;
+    list-style-type: none;
+    position: absolute;
+    top: -3%;
 }
